0.4.2
Added "Current Session" to session manager save menu to save current session.
Fixed segfault if LANG env var is unset, defaults to en_GB now.
Added "Vertical Cut" to context menu.
Fixed file opening and conversion with spaces in filename.
Fixed not picking up files to open on command line when using -m switch.
Fixed gtk 3 crash when moving outside tab.
Added 'Vertical Copy' to context menu.
Added Vertical select/copy, hold CTRL key whilst dragging.
Minor code clean for terminal pane plugin.
Fixed seffault when selecting file in browser plugin.
Minor bug fixes.
Fixed yet another api breakage in gtk3 ... for fucks sake leave shit alone guys!
Fixed kkeditmsg-3 trying to open gtk2 version of editor.
Added SessionID number to status bar.
Editor default sessionID for remote control is now desktop number +100.
Fixed charset detection on opening some files.
Added --session/-f option to load new session on opening a new instance, format is --session=/full/path/to/session/file.
Locked pages are now stored/re-loaded with save/restore session.
Fixed locking contents.
Fixed tab size in gtk3 again!
Added Lock/Unlock contents to tab popup.
Fixed editor and viewer positions not being on screen at start up.
Fixed segfaule on selecting back/forward menu item on gtk3.
Fixed wrong sized icons in menus and toolbar for certain themes in gtk3 version.
Fixed wrong button label on open dialog.
Fixed opening utf16 encoded file.
Fixed open as hexdump not writing to new tab.
Fixed doc viewer not displaying properly in a tab.
Fixed Recent menu again!
Fixed rebuild tab list on restoring session.
Updated copyright notice in about boxes.
Added symbol menu plugin.
Speed tweaks for restore session.
Moving line/selection off the top/bottom of page with shortcutkey now scroll's a couple of lines before.
Added --no-autosession,-a to options to temporarily disable auto loading/saving of session.
Fixed segfault on open hexdump.
Auto save/restore session now disabled in safe mode ( -s ).